SAX: import the Qt 5.15 souce with QTextCodec

This is the same Qt 5.15 sources, minus the docs updates, some minor code style fixes & modernization, and what appears to be a bugfix:

                 tmp = ref().toUInt(&ok, 10);
                 if (ok) {
-                    if (tmp > 0xffff) {
-                        stringAddC(QChar::highSurrogate(tmp));
-                        stringAddC(QChar::lowSurrogate(tmp));
-                    } else {
-                        stringAddC(QChar(tmp));
-                    }
+                    stringAddC(QChar(tmp));

Fixes: QTBUG-98656
Change-Id: I2cffe62afda945079b63fffd16bc5c1e63a75420
Reviewed-by: Lars Knoll <lars.knoll@qt.io>